2008-07-21  Vadim Kurland  <vadim@vk.crocodile.org>

	* ProjectPanel.h (libfwbuilder): Added missing declarations for
	gcc 4.3 per bug #2023292: "fwbuilder 3.0.0 does not build"

	* (libfwbuilder) Applied patch for gcc 4.3 per bug #2023676:
	"libfwbuilder does not build against gcc 4.3".
	
	* (libfwbuilder) fwbuilder.pro: removed unnecessary override in
	target.path to make it install in a proper place on 64 bit
	machines'

	
2008-07-20    <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleTableModel::insertRow): fixed bug (no #)
	which caused crash on windows when new rule group was
	created. This happened only on win32.

2008-07-20  Vadim Kurland  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::moveRule): fixed bug (no #): if
	rule set had several rule groups, moving rules within rule set did
	not work and caused weird effects.

	* NetworkIPv6.cpp (NetworkIPv6::NetworkIPv6): per bug #2023140:
	"Default prefix for IPv6 addresses" setting default netmask to /64
	for NetworkIPv6 object.

	* InterfaceDialog.cpp (InterfaceDialog::loadFWObject): fixed bug
	#2023141: "Can't set interface options". The GUI kept all controls
	in the interface object editor enabled when interface was child of
	a Host object, even though some controls do not apply to
	interfaces of a host. These controls were not saved into interface
	objects and the whoile behavior of the GUI was rather
	confusing. Now only proper controls are enabled when interface is
	a child of a host object.

	* RuleSetView.cpp (RuleSetView::removeRule): Fixed bug (no #):
	"remove rule" function used to remove wrong rule in the rule set
	if rule groups were used.

2008-07-18    <vadim@vk.crocodile.org>

	* instDialog.cpp (instDialog::installerSuccess): bugfixes in the
	built-in installer on Windows in case of successfull and
	unsuccessfull termination of the process. Tests for when plink.exe
	asks whether user wants to accept new ssh host key from the
	firewall.
