@@ -1,3 +1,8 @@
+2008-07-22  Vadim Kurland  <vadim@vk.crocodile.org>
+
+	* FWWindow.cpp: Applied patch to make code compile with gcc 4.3 per
+	http://svn.mandriva.com/cgi-bin/viewvc.cgi/packages/cooker/fwbuilder/current/SOURCES/fwbuilder-3.0.0-gcc43.patch
+
 2008-07-21  Vadim Kurland  <vadim@vk.crocodile.org>
 
 	* ProjectPanel.h (libfwbuilder): Added missing declarations for
